[gd_scene load_steps=2 format=3 uid="uid://phnd3s04p4jl"]

[ext_resource type="Script" path="res://Scripts/SpaceLevel/SpaceLevel.gd" id="1_dqdr7"]

[node name="SpaceLevel" type="Node2D"]
script = ExtResource("1_dqdr7")

[node name="start_spawn_enemies" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="enemies_spawn_timer" type="Timer" parent="."]

[connection signal="timeout" from="start_spawn_enemies" to="." method="_on_start_spawn_enemies_timeout"]
[connection signal="timeout" from="enemies_spawn_timer" to="." method="_on_enemies_spawn_timer_timeout"]
